--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,21 +1,24 @@
 {
-  "name": "in-memoriam-front",
-  "version": "0.1.0",
+  "name": "my-react-app",
+  "version": "1.0.0",
   "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
-  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "dependencies": {
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.13.9",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "^5.0.1",
+    "typescript": "^4.9.5"
+  },
+  "devDependencies": {
+    "@types/react": "^17.0.83",
+    "@types/react-dom": "^17.0.26"
   },
   "eslintConfig": {
     "extends": [
