--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,9 @@
   "dependencies": {
     "@types/jest": "^29.5.14",
     "@types/node": "^22.13.9",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.2.0",
     "react-scripts": "^5.0.1",
     "typescript": "^4.9.5"
   },
